src/main/resources/view/DarkTheme.css
@font-face {
    font-family: 'Space Mono';
    src: url('../fonts/SpaceMono-Regular.ttf');
}

@font-face {
    font-family: 'DejaVu Sans';
    src: url('../fonts/DejaVuSans.ttf');
}

.background {
    -fx-background-color: #0d1117;
    background-color: #0d1117; /* Used in the default.html file */
}

.title-container {
    -fx-background-color: #0d1117;
    -fx-padding: 10px;
}

.title-label {
    -fx-text-fill: white;
}

.version-label {
    -fx-text-fill: white;
}

.label {
    -fx-font-size: 11pt;
    -fx-font-family: "Segoe UI Semibold";
    -fx-text-fill: #c9d1d9;
    -fx-opacity: 0.9;
}

.label-bright {
    -fx-font-size: 11pt;
    -fx-font-family: "Segoe UI Semibold";
    -fx-text-fill: #c9d1d9;
    -fx-opacity: 1;
}

.label-header {
    -fx-font-size: 32pt;
    -fx-font-family: "Segoe UI Light";
    -fx-text-fill: #c9d1d9;
    -fx-opacity: 1;
}

.text-field {
    -fx-font-size: 12pt;
    -fx-font-family: "Segoe UI Semibold";
    -fx-text-fill: #c9d1d9;
    -fx-background-color: #161b22;
}

.tab-pane {
    -fx-padding: 0 0 0 1;
    -fx-background-color: #131921;
}

.tab-pane .tab-header-area {
    -fx-padding: 0 0 0 0;
    -fx-min-height: 0;
    -fx-max-height: 0;
}

.table-view {
    -fx-base: #0d1117;
    -fx-control-inner-background: #0d1117;
    -fx-background-color: #0d1117;
    -fx-table-cell-border-color: transparent;
    -fx-table-header-border-color: transparent;
    -fx-padding: 5;
}

.table-view .column-header-background {
    -fx-background-color: transparent;
}

.table-view .column-header, .table-view .filler {
    -fx-size: 35;
    -fx-border-width: 0 0 1 0;
    -fx-background-color: transparent;
    -fx-border-color:
            transparent
            transparent
            derive(-fx-base, 80%)
            transparent;
    -fx-border-insets: 0 10 1 0;
}

.table-view .column-header .label {
    -fx-font-size: 20pt;
    -fx-font-family: "Segoe UI Light";
    -fx-text-fill: #c9d1d9;
    -fx-alignment: center-left;
    -fx-opacity: 1;
}

.table-view:focused .table-row-cell:filled:focused:selected {
    -fx-background-color: #58a6ff;
}

.split-pane:horizontal .split-pane-divider {
    -fx-background-color: #161b22;
    -fx-border-color: transparent transparent transparent #4d4d4d;
}

.split-pane {
    -fx-border-radius: 1;
    -fx-border-width: 1;
    -fx-background-color: #0d1117;
}

.list-view {
    -fx-background-insets: 0;
    -fx-padding: 0;
    -fx-background-color: #0d1117;
}

.list-cell {
    -fx-label-padding: 0 0 0 0;
    -fx-graphic-text-gap : 0;
    -fx-padding: 0 0 0 0;
    -fx-background-color: #0d1117;
}

.list-cell:filled:even {
    -fx-background-color: #161b22;
}

.list-cell:filled:odd {
    -fx-background-color: #0d1117;
}

.list-cell:filled:selected {
    -fx-background-color: #424242;
}

.list-cell:filled:selected #cardPane {
    -fx-border-color: #424242;
    -fx-border-width: 1;
}

.list-cell .label {
    -fx-text-fill: #c9d1d9;
}

.cell_nickname_label {
    -fx-font-family: "Arial";
    -fx-font-style: italic;
    -fx-font-size: 13px;
    -fx-text-fill: #c9d1d9;
}

.cell_big_label {
    -fx-font-family: "Segoe UI Semibold";
    -fx-font-size: 16px;
    -fx-text-fill: #c9d1d9;
}

.cell_small_label {
    -fx-font-family: "Segoe UI";
    -fx-font-size: 13px;
    -fx-text-fill: #c9d1d9;
}

.cell_relationship_label {
    -fx-text-fill: #0d1117 !important;
    -fx-background-color: #ff8709;
    -fx-padding: 1 3 1 3;
    -fx-border-radius: 2;
    -fx-background-radius: 2;
    -fx-font-size: 11;
}

.stack-pane {
    -fx-background-color: #0d1117;
}

.pane-with-border {
    -fx-background-color: #0d1117;
    -fx-border-color: #161b22;
    -fx-border-top-width: 1px;
}

.status-bar {
    -fx-background-color: #161b22;
}

.result-display {
    -fx-background-color: transparent;
    -fx-font-family: "Segoe UI Light";
    -fx-font-size: 13pt;
    -fx-text-fill: #c9d1d9;
}

.result-display .label {
    -fx-text-fill: #c9d1d9 !important;
}

.status-bar .label {
    -fx-font-family: "Segoe UI Light";
    -fx-text-fill: #c9d1d9;
    -fx-padding: 4px;
    -fx-pref-height: 30px;
}

.status-bar-with-border {
    -fx-background-color: #161b22;
    -fx-border-color: #0d1117;
    -fx-border-width: 1px;
}

.status-bar-with-border .label {
    -fx-text-fill: #c9d1d9;
}

.grid-pane {
    -fx-background-color: #0d1117;
    -fx-border-color: #161b22;
    -fx-border-width: 1px;
}

.grid-pane .stack-pane {
    -fx-background-color: #0d1117;
}

.context-menu {
    -fx-background-color: #161b22;
}

.context-menu .label {
    -fx-text-fill: #c9d1d9;
}

.menu-bar {
    -fx-background-color: #0d1117;
}

.menu-bar .label {
    -fx-font-size: 14pt;
    -fx-font-family: "Segoe UI Light";
    -fx-text-fill: #c9d1d9;
    -fx-opacity: 0.9;
}

.menu .left-container {
    -fx-background-color: #0d1117;
}

.button {
    -fx-padding: 5 22 5 22;
    -fx-border-color: #313131;
    -fx-border-width: 2;
    -fx-background-radius: 0;
    -fx-background-color: #0d1117;
    -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
    -fx-font-size: 11pt;
    -fx-text-fill: #c9d1d9;
    -fx-background-insets: 0 0 0 0, 0, 1, 2;
}

.button:hover {
    -fx-background-color: #2c2c2c; /* Lighter gray */
    -fx-text-fill: #c9d1d9; /* Keep text color the same */
}

.button:pressed, .button:default:hover:pressed {
    -fx-background-color: #3a3a3a; /* Slightly darker gray when pressed */
    -fx-text-fill: #c9d1d9;
}

.button:focused {
    -fx-border-color: #c9d1d9, #c9d1d9;
    -fx-border-width: 1, 1;
    -fx-border-style: solid, segments(1, 1);
    -fx-border-radius: 0, 0;
    -fx-border-insets: 1 1 1 1, 0;
}

.button:disabled, .button:default:disabled {
    -fx-opacity: 0.4;
    -fx-background-color: #0d1117;
    -fx-text-fill: #c9d1d9;
}

.button:default:hover {
    -fx-background-color: #2c2c2c; /* Keep consistent hover effect */
}

.dialog-pane {
    -fx-background-color: #0d1117;
}

.dialog-pane > *.button-bar > *.container {
    -fx-background-color: #0d1117;
}

.dialog-pane > *.label.content {
    -fx-font-size: 14px;
    -fx-font-weight: bold;
    -fx-text-fill: #c9d1d9;
}

.dialog-pane:header *.header-panel {
    -fx-background-color: derive(#0d1117, 25%);
}

.dialog-pane:header *.header-panel *.label {
    -fx-font-size: 18px;
    -fx-font-style: italic;
    -fx-fill: #c9d1d9;
    -fx-text-fill: #c9d1d9;
}

.scroll-bar {
    -fx-background-color: #0d1117;
}

.scroll-bar .thumb {
    -fx-background-color: #383838;
    -fx-background-insets: 3;
}

.scroll-bar .increment-button, .scroll-bar .decrement-button {
    -fx-background-color: transparent;
    -fx-padding: 0 0 0 0;
}

.scroll-bar .increment-arrow, .scroll-bar .decrement-arrow {
    -fx-shape: " ";
}

.scroll-bar:vertical .increment-arrow, .scroll-bar:vertical .decrement-arrow {
    -fx-padding: 1 8 1 8;
}

.scroll-bar:horizontal .increment-arrow, .scroll-bar:horizontal .decrement-arrow {
    -fx-padding: 8 1 8 1;
}

#cardPane {
    -fx-background-color: transparent;
    -fx-border-width: 0;
}

#commandTypeLabel {
    -fx-font-size: 11px;
    -fx-text-fill: #58a6ff;
}

#commandTextField {
    -fx-background-color: transparent #0d1117 transparent #0d1117;
    -fx-background-insets: 0;
    -fx-border-color: #0d1117 #0d1117 #c9d1d9 #0d1117;
    -fx-border-insets: 0;
    -fx-border-width: 1;
    -fx-font-family: "Segoe UI Light";
    -fx-font-size: 13pt;
    -fx-text-fill: #c9d1d9;
}

#filterField, #personListPanel, #personWebpage {
    -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
}

#resultDisplay .content {
    -fx-background-color: transparent, #0d1117, transparent, #0d1117;
    -fx-background-radius: 0;
}

#tags {
    -fx-hgap: 7;
    -fx-vgap: 3;
    -fx-padding: 5 0 0 0;
}

#tags .label {
    -fx-text-fill: #0d1117;
    -fx-background-color: #35e118;
    -fx-padding: 1 3 1 3;
    -fx-border-radius: 2;
    -fx-background-radius: 2;
    -fx-font-size: 11;
}

.menu-icon {
    -fx-opacity: 1;
}

.menu-icon:hover {
    -fx-effect: dropshadow(gaussian, rgba(255, 255, 255, 0.2), 5, 0, 0, 0);
    -fx-opacity: 0.8;
}

